fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,45 +1,57 @@
+
 body{
   margin: 0;
   background-color: #121212;
   font-family: "Roboto";
+  
 }
-
 button{
   font-family: "Roboto";
   cursor: pointer;
-
+  transition-duration: 0.1s;
+}
+button:active{
+  transform: scale(0.9);
 }
 #body-section{
   display:flex;
   justify-content: space-around;
   flex-direction: column;
+
+
 }
 
 #search-body{
-  flex:6;
-  display:flex;
-  flex-direction: column;
+  top:0.1px;
+  z-index: 40;
+  position: sticky;
+  background-color: #121212;
+ 
 }
 #content{
   display:flex;
-
 }
 #cards{
   display:flex;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content:center;
+  align-items: center;
   flex-direction: row;
-  padding-top: 28px;
-
+  padding: 20px 10px;
+  flex-wrap: wrap;
+  gap:20px;
 }
+#loading-txt{
+  color:white;
+  opacity: 0.9;
+  margin-top: 10%;
+  margin-left: 30%;
+}
+
 @media screen and (max-width:1200px) {
   #cards{
     flex-direction: column;
     align-items: center;
 
   }
-}
-button{
-  cursor: pointer;
-
 }
